[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/FirePong-Title.theme" type="Theme" id=2]
[ext_resource path="res://Assets/Themes/FirePong-Menu-Item.theme" type="Theme" id=3]
[ext_resource path="res://src/Levels/LevelTemplate.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Ashes.tscn" type="PackedScene" id=5]
[ext_resource path="res://OptionsMenu.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=2]
TextEdit/colors/background_color = Color( 0, 0, 0, 0 )
TextEdit/colors/bookmark_color = Color( 0.08, 0.49, 0.98, 1 )
TextEdit/colors/brace_mismatch_color = Color( 1, 0.2, 0.2, 1 )
TextEdit/colors/breakpoint_color = Color( 0.8, 0.8, 0.4, 0.2 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/code_folding_color = Color( 0.8, 0.8, 0.8, 0.8 )
TextEdit/colors/completion_background_color = Color( 0.25098, 0, 1, 1 )
TextEdit/colors/completion_existing_color = Color( 0.87, 0.87, 0.87, 0.13 )
TextEdit/colors/completion_font_color = Color( 0.67, 0.67, 0.67, 1 )
TextEdit/colors/completion_scroll_color = Color( 1, 1, 1, 1 )
TextEdit/colors/completion_selected_color = Color( 0.26, 0.26, 0.27, 1 )
TextEdit/colors/current_line_color = Color( 0.25, 0.25, 0.26, 0.8 )
TextEdit/colors/executing_line_color = Color( 0.2, 0.8, 0.2, 0.4 )
TextEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/font_color_readonly = Color( 0.88, 0.88, 0.88, 0.5 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0.4, 0.64, 0.81, 1 )
TextEdit/colors/line_number_color = Color( 0.67, 0.67, 0.67, 0.4 )
TextEdit/colors/mark_color = Color( 1, 0.4, 0.4, 0.4 )
TextEdit/colors/member_variable_color = Color( 0.9, 0.31, 0.35, 1 )
TextEdit/colors/number_color = Color( 0.92, 0.58, 0.2, 1 )
TextEdit/colors/safe_line_number_color = Color( 0.67, 0.78, 0.67, 0.6 )
TextEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
TextEdit/colors/symbol_color = Color( 0.94, 0.94, 0.94, 1 )
TextEdit/colors/word_highlighted_color = Color( 0.8, 0.9, 0.9, 0.15 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 3
TextEdit/constants/line_spacing = 4
TextEdit/fonts/font = null
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = null
TextEdit/styles/focus = null
TextEdit/styles/normal = SubResource( 1 )
TextEdit/styles/read_only = null

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )
Game = ExtResource( 4 )
Options = ExtResource( 6 )

[node name="MainMenuContainer" type="MarginContainer" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainItems" type="GridContainer" parent="MainMenuContainer"]
margin_right = 106.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainMenuContainer/MainItems"]
margin_right = 106.0
margin_bottom = 61.0
size_flags_horizontal = 0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Fire Pong
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="MainMenuContainer/MainItems"]
margin_top = 65.0
margin_right = 37.0
margin_bottom = 84.0
size_flags_horizontal = 0
theme = ExtResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="MainMenuContainer/MainItems"]
margin_top = 88.0
margin_right = 58.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( -293.69, -200.194 )
size_flags_horizontal = 2
theme = ExtResource( 3 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="MainMenuContainer/MainItems"]
margin_top = 111.0
margin_right = 28.0
margin_bottom = 130.0
size_flags_horizontal = 2
theme = ExtResource( 3 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flames" parent="MainMenuContainer" instance=ExtResource( 5 )]

[node name="Story" type="TextEdit" parent="."]
margin_left = 69.2767
margin_top = 145.921
margin_right = 268.277
margin_bottom = 240.921
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="resized" from="MainMenuContainer" to="." method="_on_MarginContainer_resized"]
[connection signal="pressed" from="MainMenuContainer/MainItems/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenuContainer/MainItems/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MainMenuContainer/MainItems/Exit" to="." method="_on_Exit_pressed"]
